--- a/lumen.html
+++ b/lumen.html
@@ -637,7 +637,7 @@
                     <div class="evidence-info">
                         <div class="evidence-title">Anomaly Image #1</div>
                         <div class="evidence-meta">
-                            <span>IMG-03.png</span>
+            <img src="https://drive.google.com/thumbnail?id={1HyDUHoo_ia95wqgt5tvIOmLiJM1PUoSz}" alt="Image from Google Drive" />
                             <span>05.12.24</span>
                         </div>
                     </div>
@@ -649,7 +649,7 @@
                     <div class="evidence-info">
                         <div class="evidence-title">Sector Scan</div>
                         <div class="evidence-meta">
-                            <span>IMG-04.png</span>
+            <img src="https://drive.google.com/thumbnail?id={11HesIjkNQzjk5Rf0_re5Vl_NPoOh9ToF}" alt="Image from Google Drive" />
                             <span>05.13.24</span>
                         </div>
                     </div>
@@ -661,8 +661,13 @@
                     <div class="evidence-info">
                         <div class="evidence-title">Decrypted text</div>
                         <div class="evidence-meta">
-                            <span>CADET, IF THIS MESSAGE HAS REACHED YOUR EYES, YOU SUCCESSFULLY TRACED THE TRAIL FROM OUR SMALL LABORATORY MISUNDERSTANDING--VARO'S SLEEPLESS ACCUSATION--AND DECODED THE SHIFTED LETTERS. WELL DONE. A WORD OF CAUTION AS YOU CONTINUE YOUR RECONNAISSANCE COHORT ONE TRAINING: 1. EVEN ABOARD UNITY BEYOND STARS, WITH ITS MIND-BACKUPS AND REGROWN BODIES, CARELESSNESS STILL CARRIES A COST. RESTORATION IS POSSIBLE, YES, BUT TIME, RESOURCES, AND EMOTIONAL TOLL MAKE DEATH A THOROUGHLY INCONVENIENT OUTCOME. 2. TO REINFORCE THIS POINT, LOCATE THE ONLY RECORD IN THE INTERPERSONAL ARCHIVE CLASSIFIED AS A DEADLY INCIDENT. ASK HIF-LUMEN IF YOU NEED GUIDANCE FILTERING THE LOG. 3. ONCE YOU IDENTIFY THAT ENTRY, NOTE THE REPORT ID; IT WILL STEER YOU TO THE NEQT WAYPOINT ON YOUR ORIENTATION JUEST. REMAIN VIGILANT. THE WORLDS WE'LL ENTER BEYOND THESE BULKHEADS WILL NOT FORGIVE FORGETFULNESS AND NEITHER WILL VACUUM, TOQIN, OR UNSHIELDED FUSION PLASMA. TREAT YOUR FUTURE MISSIONS, AND YOUR CREWMATES, WITH DELIBERATE CARE. CADET CAESAR
-</span>
+                            <span>CADET, IF THIS MESSAGE HAS REACHED YOUR EYES, YOU SUCCESSFULLY TRACED THE TRAIL FROM OUR SMALL LABORATORY MISUNDERSTANDING--VARO'S SLEEPLESS ACCUSATION--AND DECODED THE SHIFTED LETTERS. 
+                                WELL DONE. A WORD OF CAUTION AS YOU CONTINUE YOUR RECONNAISSANCE COHORT ONE TRAINING: 
+                                1. EVEN ABOARD UNITY BEYOND STARS, WITH ITS MIND-BACKUPS AND REGROWN BODIES, CARELESSNESS STILL CARRIES A COST. RESTORATION IS POSSIBLE, YES, BUT TIME, RESOURCES, AND EMOTIONAL TOLL MAKE DEATH A THOROUGHLY INCONVENIENT OUTCOME. 
+                                2. TO REINFORCE THIS POINT, LOCATE THE ONLY RECORD IN THE INTERPERSONAL ARCHIVE CLASSIFIED AS A DEADLY INCIDENT. ASK HIF-LUMEN IF YOU NEED GUIDANCE FILTERING THE LOG.
+ 3. ONCE YOU IDENTIFY THAT ENTRY, NOTE THE REPORT ID; IT WILL STEER YOU TO THE NEQT WAYPOINT ON YOUR ORIENTATION JUEST. REMAIN VIGILANT. 
+                                THE WORLDS WE'LL ENTER BEYOND THESE BULKHEADS WILL NOT FORGIVE FORGETFULNESS AND NEITHER WILL VACUUM, TOQIN, OR UNSHIELDED FUSION PLASMA. 
+                                TREAT YOUR FUTURE MISSIONS, AND YOUR CREWMATES, WITH DELIBERATE CARE. CADET CAESAR
                             <span>05.14.24</span>
                         </div>
                     </div>
