--- a/lumen.html
+++ b/lumen.html
@@ -529,7 +529,7 @@
     <div class="terminal-container">
         <!-- Terminal Header -->
         <header class="terminal-header">
-            <div class="terminal-title glitch-effect">Digital Debrief Terminal</div>
+            <div class="terminal-title glitch-effect">NOVA INCIDENT</div>
             <div class="terminal-status">
                 <div class="status-indicator">
                     <div class="status-dot"></div>
