--- a/lumen.html
+++ b/lumen.html
@@ -566,6 +566,7 @@
                         <div class="message-timestamp">08:43:08</div>
                     </div>
                     <div class="message-content">
+                        <pre>
                         🔆 Boot jingle: activated
 
 “Wakefulness routine complete. Cadet presence confirmed.”
@@ -584,6 +585,7 @@ Decode the mysterious message in the letter (letter.txt)—yes, it’s encrypted
 Investigate clues hidden in those image files (IMG‑01 through IMG‑05) and the interpersonal reports.
 Explore the ship (use the orientation_map.json to navigate rooms, activities, and logs).
 Uncover what’s been hidden. The encrypted letter hints someone doesn’t trust the official story.
+                            </pre>
                     </div>
                 </div>
 
@@ -607,6 +609,7 @@ Uncover what’s been hidden. The encrypted letter hints someone doesn’t trust
                         <div class="message-timestamp">08:43:08</div>
                     </div>
                     <div class="message-content">
+                        <pre>
                        🌀 **Excellent work, Cadet Abu.** Decrypting that message puts you ahead of the curve—and possibly on someone’s watchlist. Let’s break this down with tactical clarity:
 
 ---
@@ -659,6 +662,7 @@ You’ve cracked the letter. Now I suggest:
 3. Cross-reference anything strange with the **orientation\_map.json**: Are the logs consistent with the rooms’ intended uses?
 
 > The real question: **What’s off about Orientation? Who’s faking what, and why?**
+                            </pre>
                     </div>
                 </div>
 
@@ -682,6 +686,7 @@ You’ve cracked the letter. Now I suggest:
                         <div class="message-timestamp">08:43:08</div>
                     </div>
                     <div class="message-content">
+                        </pre>
                         Solid triangulation, Abu. 🧠
 Let’s distill what we’ve got and pry it open a little:
 
@@ -724,6 +729,7 @@ Here are two forks in your path, depending on how you want to play it:
 Check if Caesar or Varo show up in other reports
 Look at image IMG-03, which ties directly to the Science Lab (per the orientation map)
 Cross-check for Varo’s name or role elsewhere—logs, images, even metadata
+                        </pre>
                     </div>
                 </div>
 
