--- a/lumen.html
+++ b/lumen.html
@@ -476,7 +476,7 @@
                 <div class="chat-message user">
                     <div class="message-header">
                         <div class="sender-icon user">U</div>
-                        <div class="sender-name">USER</div>
+                        <div class="sender-name">CADET ABU</div>
                         <div class="message-timestamp">08:43:05</div>
                     </div>
                     <div class="message-content">
@@ -488,7 +488,7 @@
                 <div class="chat-message ai">
                     <div class="message-header">
                         <div class="sender-icon ai">AI</div>
-                        <div class="sender-name">AI</div>
+                        <div class="sender-name">LUMEN</div>
                         <div class="message-timestamp">08:43:08</div>
                     </div>
                     <div class="message-content">
@@ -519,8 +519,8 @@ Uncover what’s been hidden. The encrypted letter hints someone doesn’t trust
                 <div class="chat-message user">
                     <div class="message-header">
                         <div class="sender-icon user">U</div>
-                        <div class="sender-name">USER</div>
-                        <div class="message-timestamp">08:43:05</div>
+                        <div class="sender-name">CADET ABU</div>
+                        <div class="message-timestamp">09:00:05</div>
                     </div>
                     <div class="message-content">
                         I have decrypted the .txt file so what is now? and also, what is the purpose of you? like what is the end of this puzzle or what I should get at the end of this project?
@@ -531,8 +531,8 @@ Uncover what’s been hidden. The encrypted letter hints someone doesn’t trust
                 <div class="chat-message ai">
                     <div class="message-header">
                         <div class="sender-icon ai">AI</div>
-                        <div class="sender-name">AI</div>
-                        <div class="message-timestamp">08:43:08</div>
+                        <div class="sender-name">LUMEN</div>
+                        <div class="message-timestamp">09:00:55</div>
                     </div>
                     <div class="message-content">
                         <pre>
@@ -596,8 +596,8 @@ You’ve cracked the letter. Now I suggest:
                 <div class="chat-message user">
                     <div class="message-header">
                         <div class="sender-icon user">U</div>
-                        <div class="sender-name">USER</div>
-                        <div class="message-timestamp">08:43:05</div>
+                        <div class="sender-name">CADET ABU</div>
+                        <div class="message-timestamp">09:19:55</div>
                     </div>
                     <div class="message-content">
                        I reviewed the pictures and the only noticeable things were 2 of them. one is A-178 and report 142. however, there were nothing special, this is what it contained: 142	Science Lab Complex	Unity	Cadet Caesar and Technician Varo	dispute	Technician Varo accused Caesar of disgarding her specimen. Later determined this was her 11th shift in a row and she had forgotten where she put it.	Placed Varo in a forced deep sleep for 24h for recovery.
@@ -608,11 +608,11 @@ You’ve cracked the letter. Now I suggest:
                 <div class="chat-message ai">
                     <div class="message-header">
                         <div class="sender-icon ai">AI</div>
-                        <div class="sender-name">AI</div>
-                        <div class="message-timestamp">08:43:08</div>
+                        <div class="sender-name">LUMEN</div>
+                        <div class="message-timestamp">09:20:08</div>
                     </div>
                     <div class="message-content">
-                        </pre>
+                        <pre>
                         Solid triangulation, Abu. 🧠
 Let’s distill what we’ve got and pry it open a little:
 
@@ -678,7 +678,7 @@ Cross-check for Varo’s name or role elsewhere—logs, images, even metadata
                     <div class="message-header">
                         <div class="sender-icon user">U</div>
                         <div class="sender-name">CADET ABU</div>
-                        <div class="message-timestamp">08:43:05</div>
+                        <div class="message-timestamp">12:05:01</div>
                     </div>
                     <div class="message-content">
                         Begin debrief sequence. Authorization code: DELTA-9-ECHO-7.
@@ -691,11 +691,11 @@ Cross-check for Varo’s name or role elsewhere—logs, images, even metadata
                     <div class="message-header">
                         <div class="sender-icon ai">AI</div>
                         <div class="sender-name">LUMEN</div>
-                        <div class="message-timestamp">08:43:08</div>
+                        <div class="message-timestamp">12:05:05</div>
                     </div>
                     <div class="message-content">
                         <pre>
-     CADET, IF THIS MESSAGE HAS REACHED YOUR EYES, YOU SUCCESSFULLY TRACED THE TRAIL FROM OUR SMALL LABORATORY MISUNDERSTANDING--VARO'S SLEEPLESS ACCUSATION--AND DECODED THE SHIFTED LETTERS. 
+                             CADET, IF THIS MESSAGE HAS REACHED YOUR EYES, YOU SUCCESSFULLY TRACED THE TRAIL FROM OUR SMALL LABORATORY MISUNDERSTANDING--VARO'S SLEEPLESS ACCUSATION--AND DECODED THE SHIFTED LETTERS. 
                                 WELL DONE. A WORD OF CAUTION AS YOU CONTINUE YOUR RECONNAISSANCE COHORT ONE TRAINING: 
                                 1. EVEN ABOARD UNITY BEYOND STARS, WITH ITS MIND-BACKUPS AND REGROWN BODIES, CARELESSNESS STILL CARRIES A COST. RESTORATION IS POSSIBLE, YES, BUT TIME, RESOURCES, AND EMOTIONAL TOLL MAKE DEATH A THOROUGHLY INCONVENIENT OUTCOME. 
                                 2. TO REINFORCE THIS POINT, LOCATE THE ONLY RECORD IN THE INTERPERSONAL ARCHIVE CLASSIFIED AS A DEADLY INCIDENT. ASK HIF-LUMEN IF YOU NEED GUIDANCE FILTERING THE LOG.
