--- a/lumen.html
+++ b/lumen.html
@@ -462,6 +462,11 @@
                     <span>SYSTEM ACTIVE</span>
                 </div>
             </div>
+            <p style="font-size: 18px; background-color: #fff3cd; padding: 15px; border-left: 5px solid #ffa502; border-radius: 8px;">
+        🔗 <strong>Try our working encryption tool here:</strong> 
+        <a href="https://abu-assignments.netlify.app/encryption_playground.html" target="_blank" style="color: #d35400; text-decoration: underline;">
+        Encryption Playground</a>
+            </p>
         </header>
 
         <!-- Chat Log Section -->
