--- a/lumen.html
+++ b/lumen.html
@@ -465,11 +465,13 @@
         </header>
         
         <header class="terminal-header">        
-            <p style="font-size: 18px; background-color: #fff3cd; padding: 15px; border-left: 5px solid #ffa502; border-radius: 8px;">
-        🔗 <strong>Try our working encryption tool here:</strong> 
-        <a href="https://abu-assignments.netlify.app/encryption_playground.html" target="_blank" style="color: #d35400; text-decoration: underline;">
-        Encryption Playground</a>
-            </p>
+            <p style="font-size: 18px; background-color: #000; color: #00ff00; padding: 15px; border-left: 5px solid #00ff00; border-radius: 8px;">
+          🔗 <strong>See my original conversation here:</strong> 
+          <a href="https://chatgpt.com/share/6825b3f0-4100-8003-b801-d9a779100c64" target="_blank" style="color: #00ff00; text-decoration: underline;">
+            HIF-LUMEN chat
+          </a>
+        </p>
+
         </header>
 
         <!-- Chat Log Section -->
