--- a/lumen.html
+++ b/lumen.html
@@ -465,9 +465,9 @@
         </header>
         
         <header class="terminal-header">        
-            <p style="font-size: 18px; background-color: #000; color: #00ff00; padding: 15px; border-left: 5px solid #00ff00; border-radius: 8px;">
+            <p class="terminal-title" style="font-size: 18px; padding: 15px; border-left: 5px solid #00ff00; border-radius: 8px;">
           🔗 <strong>See my original conversation here:</strong> 
-          <a href="https://chatgpt.com/share/6825b3f0-4100-8003-b801-d9a779100c64" target="_blank" style="color: #00ff00; text-decoration: underline;">
+          <a href="https://chatgpt.com/share/6825b3f0-4100-8003-b801-d9a779100c64" target="_blank" style=" text-decoration: underline;">
             HIF-LUMEN chat
           </a>
         </p>
