--- a/index.html
+++ b/index.html
@@ -329,11 +329,12 @@
   <div class="projects-section">
     <h2 class="projects-title">Projects</h2>
     <ul class="projects-list">
-        <li><span class="dot"></span><a href="https://docs.google.com/document/d/1JSBPkXl_SRYdCyEo5RYXZ1wYJgUFFNRge3Hm1JNtai0/edit?tab=t.0">2st assignment (Find me)</a></li>
-        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">3rd assignment (Dungeon Crawl)</a></li>
-        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/vlibrary_showcase">4th assignment (Virtual Library)</a></li>
-        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/team101_documentation.html">6th assignment (Cryptography Project)</a></li>
-        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/appscript_info.html">7th assignment (App script)</a></li>
+        <li><span class="dot"></span><a href="https://docs.google.com/document/d/1JSBPkXl_SRYdCyEo5RYXZ1wYJgUFFNRge3Hm1JNtai0/edit?tab=t.0">Week 2 assignment (Find me)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">Week 3 assignment (Dungeon Crawl)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/vlibrary_showcase">Week 4 assignment (Virtual Library)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/team101_documentation.html">Week 6 assignment (Cryptography Project)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/appscript_info.html">Week 7 assignment (App script)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/lumen.html">Week 10 assignment (LUMEN)</a></li>
       </ul>
   </div>
 </div>
