--- a/lumen.html
+++ b/lumen.html
@@ -545,7 +545,7 @@ code {
         </header>
 
         <!-- Report-->
-    <section class="chat-container">
+    <section class="report-section">
   <h2 class="report-title">WEEK 10 – LUMEN</h2>
   <p class="report-subtitle">Cadet Abu – 2417515</p>
 
