--- a/lumen.html
+++ b/lumen.html
@@ -463,6 +463,8 @@
             border-radius: 5px;
             box-shadow: var(--terminal-glow);
             overflow: hidden;
+            overflow-y: auto;
+            overflow-x: hidden;
 }
 
 .report-title {
