--- a/lumen.html
+++ b/lumen.html
@@ -540,14 +540,15 @@ code {
             HIF-LUMEN chat
           </a>
         </p>
-            <br>
-             <p class="terminal-title" style="font-size: 15px; padding: 13px; border-left: 5px solid #3891ff; border-radius: 7px;">
+        </header>
+            
+        <header>
+         <p class="terminal-title" style="font-size: 15px; padding: 13px; border-left: 5px solid #3891ff; border-radius: 7px;">
           🔗 <strong>Documenntation on doc:</strong> 
           <a href="https://docs.google.com/document/d/1A3kpyxhs6v9iKPSw9o2GagHp2FItWxu2oaPB0Ju554M/edit?usp=sharing" target="_blank" style=" text-decoration: underline;">
             Google doc.
           </a>
         </p>
-
         </header>
 
         <!-- Report-->
