--- a/lumen.html
+++ b/lumen.html
@@ -541,8 +541,8 @@ code {
           </a>
         </p>
         </header>
-            
-        <header>
+        
+        <header class="terminal-header">        
          <p class="terminal-title" style="font-size: 15px; padding: 13px; border-left: 5px solid #3891ff; border-radius: 7px;">
           🔗 <strong>Documenntation on doc:</strong> 
           <a href="https://docs.google.com/document/d/1A3kpyxhs6v9iKPSw9o2GagHp2FItWxu2oaPB0Ju554M/edit?usp=sharing" target="_blank" style=" text-decoration: underline;">
