--- a/lumen.html
+++ b/lumen.html
@@ -536,7 +536,7 @@ code {
         <header class="terminal-header">        
             <p class="terminal-title" style="font-size: 15px; padding: 13px; border-left: 5px solid #3891ff; border-radius: 7px;">
           🔗 <strong>See my original conversation here:</strong> 
-          <a href="https://chatgpt.com/share/6825b3f0-4100-8003-b801-d9a779100c64" target="_blank" style=" text-decoration: underline;">
+          <a href="https://chatgpt.com/share/6825b3f0-4100-8003-b801-d9a779100c64" target="_blank" style="color: var(--accent-purple); text-decoration: underline;">
             HIF-LUMEN chat
           </a>
         </p>
@@ -545,7 +545,7 @@ code {
         <header class="terminal-header">        
          <p class="terminal-title" style="font-size: 15px; padding: 13px; border-left: 5px solid #3891ff; border-radius: 7px;">
           🔗 <strong>Documenntation on doc:</strong> 
-          <a href="https://docs.google.com/document/d/1A3kpyxhs6v9iKPSw9o2GagHp2FItWxu2oaPB0Ju554M/edit?usp=sharing" target="_blank" style=" text-decoration: underline;">
+          <a href="https://docs.google.com/document/d/1A3kpyxhs6v9iKPSw9o2GagHp2FItWxu2oaPB0Ju554M/edit?usp=sharing" target="_blank" style="color: var(--accent-purple); text-decoration: underline;">
             Google doc.
           </a>
         </p>
